--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <title>RagingRoosevlet</title>
-    <meta http-equiv="refresh" content="0; url=http://ragingroosevelt.com" />
+    
 </head>
+<body>
+    Hello World!
+</body>
 </html>
