--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <title>RagingRoosevlet</title>
-    
+    <meta http-equiv="refresh" content="0; url=http://RagingRoosevelt.com/" />
 </head>
 <body>
-    Hello World!
+    
 </body>
 </html>
