--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+    <!--
     <title>RagingRoosevlet</title>
     <meta http-equiv="refresh" content="0; url=http://RagingRoosevelt.com/" />
+    -->
 </head>
 <body>
-    
+    Coming soon.
 </body>
 </html>
