--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+    <link rel="icon" 
+      type="image/png" 
+      href="http://theodorelindsey.com/favicon.png">
 </head>
 <body>
     Coming soon.
