fixed grammar error

--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ section: Home
 
 <h2>Intro</h2>
 
-Currently this site houses my academic work and <a href="http://ragingroosevelt.com">RagingRoosevelt.com</a> houses my personal project.  I'm working on merging the two.
+Currently this site houses my academic work and <a href="http://ragingroosevelt.com">RagingRoosevelt.com</a> houses my personal projects.  I'm working on merging the two.
