--- a/academics.html
+++ b/academics.html
@@ -9,6 +9,14 @@ section: Academics
 <h2>Research Interestes</h2>
 <p>Data processing and mining methods.</p>
 
+<h2>Education</h2>
+<table border="0">
+<tr><td>2016</td><td>M.S. in Computer Science</td><td>University of Kansas</td></tr>
+<tr><td>2014</td><td>M.S. in Mathematics</td><td>University of Kansas</td></tr>
+<tr><td>2011</td><td>B.S. in Mathematics</td><td>Principia College</td></tr>
+<tr><td>2008</td><td>A.A. general studies</td><td>Clackamas Community College</td></tr>
+</table>
+
 <h2>Bio</h2>
 <p>Theodore Lindsey is a Masters student in <a href="http://eecs.ku.edu/">Computer Science</a> at the <a href="https://www.ku.edu/">University of Kansas</a>.
 He studies data mining and is advised by Professor <a href="http://people.eecs.ku.edu/~jerzy/">Jerzy Grzymala-Busse</a>.
