--- a/academics.html
+++ b/academics.html
@@ -10,11 +10,11 @@ section: Academics
 <p>Data processing and mining methods.</p>
 
 <h2>Education</h2>
-<table border="0">
+<table border="0" cellpadding="5">
 <tr><td>2016</td><td>M.S. in Computer Science</td><td>University of Kansas</td></tr>
 <tr><td>2014</td><td>M.S. in Mathematics</td><td>University of Kansas</td></tr>
 <tr><td>2011</td><td>B.S. in Mathematics</td><td>Principia College</td></tr>
-<tr><td>2008</td><td>A.A. general studies</td><td>Clackamas Community College</td></tr>
+<tr><td>2008</td><td>A.A. General Studies</td><td>Clackamas Community College</td></tr>
 </table>
 
 <h2>Bio</h2>
