education formatting test

--- a/academics.html
+++ b/academics.html
@@ -17,6 +17,15 @@ section: Academics
 <tr><td>2008</td><td>A.A. General Studies</td><td>Clackamas Community College</td></tr>
 </table>
 
+<div style="float: right; clear: right; margin: 10px;">2016</div>
+<p>M.S. in Computer Science, University of Kansas</p>
+<div style="float: right; clear: right; margin: 10px;">2014</div>
+<p>M.S. in Mathematics, University of Kansas</p>
+<div style="float: right; clear: right; margin: 10px;">2011</div>
+<p>M.S. in Mathematics, Principa College</p>
+<div style="float: right; clear: right; margin: 10px;">2008</div>
+<p>A.A. General Studies, Clackamas Community College</p>
+
 <h2>Bio</h2>
 <p>Theodore Lindsey is a Masters student in <a href="http://eecs.ku.edu/">Computer Science</a> at the <a href="https://www.ku.edu/">University of Kansas</a>.
 He studies data mining and is advised by Professor <a href="http://people.eecs.ku.edu/~jerzy/">Jerzy Grzymala-Busse</a>.
