--- a/academics.html
+++ b/academics.html
@@ -10,14 +10,11 @@ section: Academics
 <p>Data processing and mining methods.</p>
 
 <h2>Education</h2>
-<div style="float: right; clear: right; margin: 10px;">2016</div>
-<p>M.S. in Computer Science, University of Kansas</p>
-<div style="float: right; clear: right; margin: 10px;">2014</div>
-<p>M.S. in Mathematics, University of Kansas</p>
-<div style="float: right; clear: right; margin: 10px;">2011</div>
-<p>M.S. in Mathematics, Principa College</p>
-<div style="float: right; clear: right; margin: 10px;">2008</div>
-<p>A.A. General Studies, Clackamas Community College</p>
+
+<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>M.S. in Computer Science, University of Kansas</li><li>2016</li></ul>
+<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>M.S. in Mathematics, University of Kansas</li><li>2014</li></ul>
+<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>B.S. in Mathematics, Principa College</li><li>2011</li></ul>
+<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>A.A. General Studies, Clackamas Community College</li><li>2008</li></ul>
 
 <h2>Bio</h2>
 <p>Theodore Lindsey is a Masters student in <a href="http://eecs.ku.edu/">Computer Science</a> at the <a href="https://www.ku.edu/">University of Kansas</a>.
