testing and added first post

--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@ last_modified_at: 2015-08-21
 <h2>Intro</h2>
 
 Currently this site houses my academic work and <a href="http://ragingroosevelt.com">RagingRoosevelt.com</a> houses my personal projects.  I'm working on merging the two.
+
+TEST: {{file.modified_time}}
