--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,15 @@
 ---
 layout: default
-title: ErgoDox Layout Update
+title: Blog
 section: Blog
 last_modified_at: 2014-08-07
 ---
+
+<h1>Blog Posts</h1>
+
+
+{% for post in site.posts limit: 10 %}
+    <h2><a href="{{post.url}}">{{ post.title }}</a></h2>
+    <h4>{{ post.date | date: "%B %-d, %Y"}}</h4>
+    <p> {{ post.content | truncatewords: 50}}
+{% endfor %}
