updated course pages with (slightly) better layout

--- a/teaching/2013S-math115/index.html
+++ b/teaching/2013S-math115/index.html
@@ -14,7 +14,7 @@ last_modified_at: 2015-08-21
 <h3>Course Info</h3>
 <ul>
 <li><a href="math115syllabus.pdf">Sylabus</a><br>
-<li><em>Text</em>: Applied Calculus, Tan, Brooks/Cole, 9th edition, 2012, University of Kansas edition <br><b>with WebAssign access code</b> (note: if you just get a WebAssign license, it includes an ebook copy of the book)
+<li><em>Text</em>: Applied Calculus, Tan, Brooks/Cole, 9th edition, 2012,<br /> University of Kansas edition <b>with WebAssign access code</b> (note: if you just get a WebAssign license, it includes an ebook copy of the book)
 <li><a href="http://math.ku.edu/~tlindsey">Instructor Page</a>
 <li><a href="http://www.math.ku.edu/academics/gateways/">Gateway Exam</a>
 <li><a href="https://courseware.ku.edu/">Blackboard</a>
@@ -34,7 +34,7 @@ last_modified_at: 2015-08-21
 
 <a name="calendar"></a>
 <h3>Course Calendar</h3>
-<iframe src="https://www.google.com/calendar/embed?src=0fi83p5kk0mtt1vfg6sp4pjftc%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://www.google.com/calendar/embed?src=0fi83p5kk0mtt1vfg6sp4pjftc%40group.calendar.google.com&ctz=America/Chicago&dates=20130120%2F20130518" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 <br><br><br><br>
 
 
