--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Theodore S. Lindsey
-section: Home
+title: Error 404 (Not Found)!
+section: 404
 last_modified_at: 2015-08-21
 permalink: /404.html
 ---
