updated css, fixed incorrectly listed degree

--- a/academics.html
+++ b/academics.html
@@ -24,10 +24,10 @@ He also has extensive tutoring experience and has tutored mathematics profession
 
 <h2>Education</h2>
 
-<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>M.S. in Computer Science, University of Kansas</li><li>2016</li></ul>
-<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>M.S. in Mathematics, University of Kansas</li><li>2014</li></ul>
-<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>B.S. in Mathematics, Principa College</li><li>2011</li></ul>
-<ul style="display: flex; justify-content: space-between; list-style-type: none; padding-left:0; margin: 2px;"><li>A.A. General Studies, Clackamas Community College</li><li>2008</li></ul>
+<ul id="hfill"><li>M.S. in Computer Science, University of Kansas</li><li>2016</li></ul>
+<ul id="hfill"><li>M.A. in Mathematics, University of Kansas</li><li>2014</li></ul>
+<ul id="hfill"><li>B.S. in Mathematics, Principa College</li><li>2011</li></ul>
+<ul id="hfill"><li>A.A. General Studies, Clackamas Community College</li><li>2008</li></ul>
 
 <h2>Courses Taken</h2>
 <table border="0" cellpadding=2px class="gridtable">
