added additional teaching info

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -6,6 +6,12 @@ last_modified_at: 2015-08-21
 ---
 
 <h2>Teaching</h2>
+
+<p>
+<b>Office</b>: Eaton 2029<br />
+<b>Hours</b>: M 11:30am - 15:30pm, or by appointment
+</p>
+
 <p><ul>
     <li>EECS 138 - 2015 Fall
     <li><a href="/teaching/2015S-EECS448/">EECS 448</a> - 2015 Spring
