Updated home page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 layout: default
 title: Theodore S. Lindsey
 section: Home
-last_modified_at: 2015-08-21
+last_modified_at: 2015-08-27
 ---
 
 
 <h2>Intro</h2>
 
-Currently this site houses my academic work and <a href="http://ragingroosevelt.com">RagingRoosevelt.com</a> houses my personal projects.  I'm working on merging the two.
+<p>Here you will find a summary of my interest, projects, and employment.</p>
+
+<p>In the <a href="/teaching/">teaching section</a> is an archive of courses that I have taught and, 
+when I'm not using blackboard for course management, information about ongoing courses.</p>
+
+<p>In the <a href="/academics.html">academics section</a> I have catalogued all of the courses I have 
+taken while pursuing my M.S. in Computer Science and my M.A. in Mathematics in addition to a brief 
+academic bio.</p>
+
+<p>In the <a href="/blog/">blog</a>, I chronicle my ongoing and past personal projects.</p>
