--- a/academics.html
+++ b/academics.html
@@ -24,7 +24,7 @@ He also has extensive tutoring experience and has tutored mathematics profession
 
 <ul id="hfill"><li>M.S. in Computer Science, University of Kansas</li><li>2016</li></ul>
 <ul id="hfill"><li>M.A. in Mathematics, University of Kansas</li><li>2014</li></ul>
-<ul id="hfill"><li>B.S. in Mathematics, Principa College</li><li>2011</li></ul>
+<ul id="hfill"><li>B.S. in Mathematics, Principia College</li><li>2011</li></ul>
 <ul id="hfill"><li>A.A. General Studies, Clackamas Community College</li><li>2008</li></ul>
 
 <h2>Courses Taken</h2>
