fixed background image display

--- a/academics.html
+++ b/academics.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Theodore S. Lindsey
+title: Academics - Theodore S. Lindsey
 section: Academics
 last_modified_at: 2015-08-21
 ---
