--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Theodore S. Lindsey
+title: Teaching - Theodore S. Lindsey
 section: Teaching
 last_modified_at: 2015-08-21
 ---
