fixed a teaching page, added test layout page

--- a/teaching/2014S-math121/index.html
+++ b/teaching/2014S-math121/index.html
@@ -7,90 +7,99 @@ last_modified_at: 2014-05-06
 
 <h2>Math 121 (Enhanced) - Spring 2014</h2>
 
+
 <div style="width:100%; overflow:hidden; *zoom:1;">
 <div style="float:left; width:60%; height:100%; overflow:hidden;">
 <h3 id="info">Course Info</h3>
 <ul>
-    <li><a href="math121syllabus.pdf">Syllabus</a><br>
+    <li><a href="math121syllabus.pdf">Syllabus</a><br></li>
     <li><em>Instructor</em>: <a href="http://math.ku.edu/~tlindsey">Theodore Lindsey</a>
-    <ul>
-        <li>Office Hours: MWR 12-1 (snow 543)
-    </ul>
-    <li><em>Coordinator</em>: <a href="http://www.math.ku.edu/~stanis/Math121-S14.html">Milena Stanislavova</a>
+        <ul>
+            <li>Office Hours: MWR 12-1 (snow 543)</li>
+        </ul>
+    </li>
+    <li><em>Coordinator</em>: <a href="http://www.math.ku.edu/~stanis/Math121-S14.html">Milena Stanislavova</a></li>
     <li>Course Info
     <ul>
-        <li>Lecture: Math 121 (line number 59424)
-        <li>Lab: Math 197 (line number 59428)
+        <li>Lecture: Math 121 (line number 59424)</li>
+        <li>Lab: Math 197 (line number 59428)</li>
     </ul>
-    <li><a href="http://www.math.ku.edu/academics/gateways/">Gateway Exam</a>
+    </li>
+    <li><a href="http://www.math.ku.edu/academics/gateways/">Gateway Exam</a></li>
     <!--<ul>
         <li> <em>Online Exam Deadline</em>: Friday, October 11 at 11:59 P.M.
         <li> <em>In-Lab Exam Begins</em>: Monday, September 23 at 9:00 A.M. 
         <li> <em>In-Lab Exam Ends</em>: Friday, October 25 at 5:00 P.M.
     </ul>-->
-    <li>WebAssign (see sidebar link in Blackboard)
-    <li><a href="http://courseware.ku.edu">Blackboard</a>
-    <li><a href="http://www.math.ku.edu/~cclifton/academics/teaching/2013/fall/math121_files/2013fa121notes.pdf">Notes</a> (pdf)
-    <li><a href="#policy">Policies</a>
-    <li><a href="http://www.math.ku.edu/ksacg/121/2013_Fa/CRC_schedule/2013fa121Anschutz439.pdf">Helproom Schedule</a>
+    <li>WebAssign (see sidebar link in Blackboard)</li>
+    <li><a href="http://courseware.ku.edu">Blackboard</a></li>
+    <li><a href="http://www.math.ku.edu/~cclifton/academics/teaching/2013/fall/math121_files/2013fa121notes.pdf">Notes</a> (pdf)</li>
+    <li><a href="#policy">Policies</a></li>
+    <li><a href="http://www.math.ku.edu/ksacg/121/2013_Fa/CRC_schedule/2013fa121Anschutz439.pdf">Helproom Schedule</a></li>
     <li><a href="#assignments">Assignments</a>
-    <ul>
-        <li><a href="#week2">Week 2</a>
-        <li><a href="#week3">Week 3</a>
-        <li><a href="#week4">Week 4</a>
-        <li><a href="#week5">Week 5</a>
-        <li><a href="#week6">Week 6</a>
-        <li><a href="#week7">Week 7</a>
-        <li><a href="#week8">Week 8</a>
-        <li><a href="#week9">Week 9</a>
-        <li><a href="#week10">Week 10</a>
-        <li><a href="#week11">Week 11</a>
-        <li><a href="#week12">Week 12</a>
-        <li><a href="#week13">Week 13</a>
-        <li><a href="#week14">Week 14</a>
-        <li><a href="#week15">Stop Week</a>
-    </ul>
+        <ul>
+        <li><a href="#week2">Week 2</a></li>
+        <li><a href="#week3">Week 3</a></li>
+        <li><a href="#week4">Week 4</a></li>
+        <li><a href="#week5">Week 5</a></li>
+        <li><a href="#week6">Week 6</a></li>
+        <li><a href="#week7">Week 7</a></li>
+        <li><a href="#week8">Week 8</a></li>
+        <li><a href="#week9">Week 9</a></li>
+        <li><a href="#week10">Week 10</a></li>
+        <li><a href="#week11">Week 11</a></li>
+        <li><a href="#week12">Week 12</a></li>
+        <li><a href="#week13">Week 13</a></li>
+        <li><a href="#week14">Week 14</a></li>
+        <li><a href="#week15">Stop Week</a></li>
+        </ul>
+    </li>
     <li><a href="./2014sp121exam1.pdf">Exam 1</a>
-    <ul>
-        <li><a href="./2014sp121exam1_key.pdf">Key</a>
-        <li><a href="./2014sp121exam1_practice.pdf">Practice Exam</a>
-        <li><a href="./2014sp121exam1_practice_key.pdf">Practice Exam Key</a>
-    </ul>
+        <ul>
+        <li><a href="./2014sp121exam1_key.pdf">Key</a></li>
+        <li><a href="./2014sp121exam1_practice.pdf">Practice Exam</a></li>
+        <li><a href="./2014sp121exam1_practice_key.pdf">Practice Exam Key</a></li>
+        </ul>
+    </li>
     <li>Midterm
-    <ul>
-        <li><a href="./2014sp121midterm_sample.pdf">Midterm Practice</a>
-        <li><a href="./2014sp121midterm_key.pdf">Midterm Key</a>
-    </ul>
+        <ul>
+        <li><a href="./2014sp121midterm_sample.pdf">Midterm Practice</a></li>
+        <li><a href="./2014sp121midterm_key.pdf">Midterm Key</a></li>
+        </ul>
+    </li>
     <li><a href="./2014sp121exam3.pdf">Exam 3</a>
-    <ul>
-        <li><a href="./2014sp121exam3_key.pdf">Key</a>
-        <li><a href="./2014sp121exam3_sample.pdf">Practice Exam</a>
-    </ul>
+        <ul>
+        <li><a href="./2014sp121exam3_key.pdf">Key</a></li>
+        <li><a href="./2014sp121exam3_sample.pdf">Practice Exam</a></li>
+        </ul>
+    </li>
     <li>Final Exam
-    <ul>
-        <li><a href="./2014sp121FinalA.pdf">Sample Exam A</a>
-        <li><a href="./2014sp121FinalB.pdf">Sample Exam B</a>
-        <li><a href="./2013fa121FinalC.pdf">Sample Exam C (2013)</a>
-    </ul>
+        <ul>
+        <li><a href="./2014sp121FinalA.pdf">Sample Exam A</a></li>
+        <li><a href="./2014sp121FinalB.pdf">Sample Exam B</a></li>
+        <li><a href="./2013fa121FinalC.pdf">Sample Exam C (2013)</a></li>
+        </ul>
+    </li>
 </ul>
 <br><br><br><br>
 
 
 <h3 id="resources">Useful Resources</h3>
 <ul>
-    <li><a href="http://education-portal.com/academy/subject/calculus.html">Education Portal: Calculus</a>
-    <li><a href="http://www.math.hmc.edu/calculus/tutorials/">HMC Calculus Tutorials</a>
-    <li><a href="http://www.sosmath.com/calculus/calculus.html">SoS math</a>
-    <li><a href="https://www.khanacademy.org/math/calculus">Khan Academy</a>
-    <li><a href="http://tutorial.math.lamar.edu/Classes/CalcI/CalcI.aspx">Paul's Online Math Notes</a>
-    <li><a href="http://www.wolframalpha.com/">Wolfram|Alpha</a>
+    <li><a href="http://education-portal.com/academy/subject/calculus.html">Education Portal: Calculus</a></li>
+    <li><a href="http://www.math.hmc.edu/calculus/tutorials/">HMC Calculus Tutorials</a></li>
+    <li><a href="http://www.sosmath.com/calculus/calculus.html">SoS math</a></li>
+    <li><a href="https://www.khanacademy.org/math/calculus">Khan Academy</a></li>
+    <li><a href="http://tutorial.math.lamar.edu/Classes/CalcI/CalcI.aspx">Paul's Online Math Notes</a></li>
+    <li><a href="http://www.wolframalpha.com/">Wolfram|Alpha</a></li>
     <li>Calculator Emulators
-    <ul>
-        <li><a href="https://play.google.com/store/apps/details?id=com.Bisha.TI89EmuDonation">TI 82/83/84/89 emulator</a> for android (<a href="https://play.google.com/store/apps/details?id=com.Bisha.TI89Emu">free version</a>, only supports 89)
-        <li><a href="http://wabbit.codeplex.com/">Wabbitemu TI 82/83/84 emulator</a> for Windows and OS X
-        <li><a href="http://education.ti.com/en/us/software/details/en/6633925F6176419197BF6CA051F5F7B4/89ti89tioperatingsystem">TI 89 rom</a> (via TI website)
-    </ul>
-    <li><a href="./UsefulFormulas/Useful Formulas.pdf">Useful formulas</a>
+        <ul>
+        <li><a href="https://play.google.com/store/apps/details?id=com.Bisha.TI89EmuDonation">TI 82/83/84/89 emulator</a> for android (<a href="https://play.google.com/store/apps/details?id=com.Bisha.TI89Emu">free version</a>, only supports 89)</li>
+        <li><a href="http://wabbit.codeplex.com/">Wabbitemu TI 82/83/84 emulator</a> for Windows and OS X</li>
+        <li><a href="http://education.ti.com/en/us/software/details/en/6633925F6176419197BF6CA051F5F7B4/89ti89tioperatingsystem">TI 89 rom</a> (via TI website)</li>
+        </ul>
+    </li>
+    <li><a href="./UsefulFormulas/Useful Formulas.pdf">Useful formulas</a></li>
 </ul>
 <br><br><br><br>
 
@@ -98,33 +107,35 @@ last_modified_at: 2014-05-06
 <h3 id="policy">Policies</h3>
 <ul>
     <li>General
-    <ul>
-        <li>The course is divided into four units, with an exam marking the conclusion of each.
-        <li>Paper homework will be collected regularly at the end of class. Assignments and their due dates are subject to change and should be checked daily.
-        <li>Quizzes may be given without advance notice, but will usually be announced at least one class day in advance (often they will cover the reading for that day).
-        <li>Class attendance is an important component of success in the course! If a student is unable to attend class due to illness or a medical/family emergency, he/she should contact the instructor immediately to arrange for an excused absence.
-        <li>Participation and attendance is strongly encouraged! This means you should: 
         <ul>
-            <li>ask/answer questions
-            <li>make contributions to group work
-            <li>politely draws attention to and/or corrects mistakes
-            <li>go to the board to work on problems as requested by the instructor
-            <li>come to class and stay awake
-        </ul>
-    </ul>
+        <li>The course is divided into four units, with an exam marking the conclusion of each.</li>
+        <li>Paper homework will be collected regularly at the end of class. Assignments and their due dates are subject to change and should be checked daily.</li>
+        <li>Quizzes may be given without advance notice, but will usually be announced at least one class day in advance (often they will cover the reading for that day).</li>
+        <li>Class attendance is an important component of success in the course! If a student is unable to attend class due to illness or a medical/family emergency, he/she should contact the instructor immediately to arrange for an excused absence.</li>
+        <li>Participation and attendance is strongly encouraged! This means you should: 
+            <ul>
+            <li>ask/answer questions</li>
+            <li>make contributions to group work</li>
+            <li>politely draws attention to and/or corrects mistakes</li>
+            <li>go to the board to work on problems as requested by the instructor</li>
+            <li>come to class and stay awake</li>
+            </ul></li>
+        </ul></li>
     <li>Homework Format
-    <ul>
-    <li>A student's name should appear in the top right corner of each page of his/her work.
-    <li>Each student is responsible for ensuring no pages will detach from their homework.  Any unidentifiable pages will not be graded.
-    <li>Please write legibly in order to ensure accurate grading!
-    </ul>
+        <ul>
+        <li>A student's name should appear in the top right corner of each page of his/her work.</li>
+        <li>Each student is responsible for ensuring no pages will detach from their homework.  Any unidentifiable pages will not be graded.</li>
+        <li>Please write legibly in order to ensure accurate grading!</li>
+        </ul></li>
     <li>Expectations
-    <ul>
-    <li>Late homework/quizzes will not be accepted. 
-    <li>Rare exceptions may be made only if the student has contacted the instructor in advance to make other arrangements.
-    </ul>
+        <ul>
+        <li>Late homework/quizzes will not be accepted. </li>
+        <li>Rare exceptions may be made only if the student has contacted the instructor in advance to make other arrangements.</li>
+        </ul></li>
 </ul>
 <br><br><br><br>
+
+
 
 
 <h3 id="assignments">Assignments</h3>
