--- a/test_index.html
+++ b/test_index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="{{ "/css/mobile.css" | prepend: site.baseurl }}">
 </head>
 
