more mobile layout testing

--- a/test_index.html
+++ b/test_index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=500px, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=700px, initial-scale=0.55, maximum-scale=0.55, minimum-scale=0.55">
     <link rel="stylesheet" href="{{ "/css/mobile.css" | prepend: site.baseurl }}">
 </head>
 
@@ -12,7 +12,7 @@
 <div class="all">
 
 
-<div class="all sidebar_wrapper">class=sidebar_wrapper
+<div class="sidebar_wrapper">class=sidebar_wrapper
     <ul>
     <li><a href="">Home</a></li>
     <li><a href="">Academics</a></li>
@@ -49,9 +49,10 @@
     </ul>
 </div>
 
-<div class="all centred_wrapper header_wrapper">class=header_wrapper</div>
+<div class="centred_wrapper header_wrapper">class=header_wrapper
+</div>
 
-<div class="all centred_wrapper main_wrapper">class=main_wrapper
+<div class="centred_wrapper content_wrapper">class=main_wrapper
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sed rhoncus sem, id malesuada neque. Fusce libero elit, elementum vel varius vel, porta nec felis. Nullam ut pretium magna. Praesent consectetur lorem nulla, a venenatis libero dapibus commodo. Sed vehicula, felis non malesuada laoreet, odio diam viverra turpis, quis fringilla magna sapien in dolor. Nulla tempus nisi eu libero tempor cursus. Integer finibus tellus eget bibendum lobortis.</p>
 
     <p>Nam sed ullamcorper nulla. Curabitur scelerisque sapien sit amet felis accumsan scelerisque. Vestibulum rhoncus vulputate turpis in egestas. Suspendisse diam arcu, pretium vitae commodo nec, volutpat et massa. Nunc feugiat justo eget lorem rutrum tincidunt. Nunc imperdiet est id augue congue, varius rhoncus ante accumsan. Ut rhoncus libero enim.</p>
@@ -75,7 +76,8 @@
     <p>In egestas a risus ut vestibulum. Vestibulum mollis tellus quis enim ornare, id posuere felis ultrices. Proin egestas tincidunt orci vel egestas. Morbi magna ante, imperdiet quis aliquet eget, lacinia eget massa. Vivamus vitae mollis felis, et consectetur felis. Pellentesque eleifend sem mi, ac pellentesque ipsum accumsan ut. Fusce non risus tincidunt, egestas libero scelerisque, maximus lectus. Morbi iaculis dignissim elit, eget ornare libero accumsan et. Nam auctor suscipit mattis. Donec non tincidunt massa. Quisque molestie nibh elit, ut scelerisque leo lacinia at. Integer varius interdum tellus, porttitor iaculis sem suscipit at. Donec vel ultrices risus. Maecenas venenatis imperdiet lectus et ullamcorper. Fusce dapibus elementum lacus, non laoreet nibh vulputate eu. Etiam vel leo vestibulum, maximus arcu id, pharetra felis.</p>
 </div>
 
-<div class="all centred_wrapper footer_wrapper">class=footer_wrapper</div>
+<div class="centred_wrapper footer_wrapper">class=footer_wrapper
+</div>
 
 <div class="clear"></div>
 
