--- a/teaching/index.html
+++ b/teaching/index.html
@@ -8,8 +8,12 @@ last_modified_at: 2015-08-21
 <h2>Teaching</h2>
 
 <p>
-<b>Office</b>: Eaton 2029<br />
-<b>Hours</b>: M 11:30am - 15:30pm, or by appointment
+<table>
+<tr><td><b>Office:</b></td><td>{{ site.office }}</td></tr>
+<tr><td><b>Email:</b></td><td>{{ site.email }}</td></tr>
+<tr><td><b>Phone:</b></td><td>{{ site.phone }}</td></tr>
+<tr><td><b>Hours:</b></td><td>{{ site.hours }}</td></tr>
+</table>
 </p>
 
 <p><ul>
