--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,6 @@ last_modified_at: 2015-08-27
 <tr><td><b>Office:</b></td><td><a href="https://www.google.com/maps/place/Eaton+Hall,+Lawrence,+KS+66045">{{ site.office }}</a></td></tr>
 <tr><td><b>Email:</b></td><td>{{ site.email }}</td></tr>
 <tr><td><b>Phone:</b></td><td>{{ site.phone }}</td></tr>
-<tr><td><b>Hours:</b></td><td>{{ site.hours }}</td></tr>
+<tr><td valign="top"><b>Hours:</b></td><td>{{ site.hours }}</td></tr>
 </table>
 </p>
