--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ last_modified_at: 2015-08-27
 
 <h2>Intro</h2>
 
-<p>Here you will find a summary of my interest, projects, and employment.</p>
+<p>Here you will find a summary of my interests, projects, and employment.</p>
 
 <p>In the <a href="/teaching/">teaching section</a> is an archive of courses that I have taught and, 
 when I'm not using blackboard for course management, information about ongoing courses.</p>
