--- a/academics.html
+++ b/academics.html
@@ -30,10 +30,14 @@ He also has extensive tutoring experience and has tutored mathematics profession
 <h2>Courses Taken</h2>
 <table border="0" cellpadding=2px class="gridtable">
 <th>Semester</th><th>Course #</th><th>Course Title</th><th>Professor</th>
-<tr><td><i></i></td><td>EECS 738</td><td>Machine Learning</td><td>TBD</td></tr>
+
+<tr><td><i>F 2016</i></td><td>EECS 891</td><td>Graduate Problems</td><td><a href="http://people.eecs.ku.edu/~jerzy/">Jerzy W. Grzymala-Busse</a></td></tr>
 <tr><td><i></i></td><td>EECS 741</td><td>Computer Vision</td><td>TBD</td></tr>
-<tr><td><i></i></td><td>EECS 767</td><td>Information Retrieval</td><td>TBD</td></tr>
-<tr><td><i></i></td><td>EECS 891</td><td>Graduate Problems</td><td>TBD</td></tr>
+<tr><td><i></i></td><td>EECS 738</td><td>Machine Learning</td><td>TBD</td></tr>
+
+<tr><td><i>S 2016</i></td><td>EECS 891</td><td>Graduate Problems</td><td><a href="http://people.eecs.ku.edu/~jerzy/">Jerzy W. Grzymala-Busse</a></td></tr>
+<tr><td><i></i></td><td>EECS 767</td><td>Information Retrieval</td><td><a href="http://www.ittc.ku.edu/~bluo/"></a>Bo Luo</a></td></tr>
+<tr><td><i></i></td><td>EECS 739</td><td>Scientific Parallel Computing</td><td><a href="http://people.eecs.ku.edu/~shontz/">Suzanne Shontz</a></td></tr>
 
 <tr><td><i>F 2015</i></td><td>EECS 839</td><td>Mining Special Data</td><td><a href="http://people.eecs.ku.edu/~jerzy/">Jerzy W. Grzymala-Busse</a></td></tr>
 <tr><td></td><td>EECS 802</td><td>Colloquium and Seminar</td><td><a href="http://eecs.ku.edu/people/faculty/jstiles">James Stiles</a></td></tr>
