--- a/academics.html
+++ b/academics.html
@@ -36,7 +36,7 @@ He also has extensive tutoring experience and has tutored mathematics profession
 <tr><td><i></i></td><td>EECS 738</td><td>Machine Learning</td><td>TBD</td></tr>
 
 <tr><td><i>S 2016</i></td><td>EECS 891</td><td>Graduate Problems</td><td><a href="http://people.eecs.ku.edu/~jerzy/">Jerzy W. Grzymala-Busse</a></td></tr>
-<tr><td><i></i></td><td>EECS 767</td><td>Information Retrieval</td><td><a href="http://www.ittc.ku.edu/~bluo/"></a>Bo Luo</a></td></tr>
+<tr><td><i></i></td><td>EECS 767</td><td>Information Retrieval</td><td><a href="http://www.ittc.ku.edu/~bluo/">Bo Luo</a></td></tr>
 <tr><td><i></i></td><td>EECS 739</td><td>Scientific Parallel Computing</td><td><a href="http://people.eecs.ku.edu/~shontz/">Suzanne Shontz</a></td></tr>
 
 <tr><td><i>F 2015</i></td><td>EECS 839</td><td>Mining Special Data</td><td><a href="http://people.eecs.ku.edu/~jerzy/">Jerzy W. Grzymala-Busse</a></td></tr>
