--- a/teaching/index.html
+++ b/teaching/index.html
@@ -8,7 +8,7 @@ last_modified_at: 2015-08-21
 <h2>Teaching</h2>
 
 <p><ul>
-    <li>EECS 138 - 2015 Fall
+    <li><a href="https://github.com/RagingRoosevelt/EECS138-DemoPrograms/blob/master/README.md">EECS 138</a> - 2015 Fall, 2016 Spring
     <li><a href="/teaching/2015S-EECS448/">EECS 448</a> - 2015 Spring
     <li><a href="/teaching/2014S-math121/">MATH 121</a> - 2014 Spring
     <li><a href="/teaching/2013F-math121/">MATH 121</a> - 2013 Fall
