--- a/projects/ML_GPM_calc.html
+++ b/projects/ML_GPM_calc.html
@@ -25,7 +25,8 @@ To determine the base and per-level GPM, see the earning property listed for you
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script>// quadratic equation function
 function gpm() {
-    var rarity, level, base, per, gpm;
+    var rarity, level, base, per;
+    var gpm, perL, perH;
     
     //Get values for a, b, c, x
     level = Number(document.getElementById("level").value);
@@ -39,8 +40,10 @@ function gpm() {
     }
     else if (!isNaN(level))
     {
-        gpm = Math.floor(base + per * Math.min(level-1, 9) + (per / 2) * Math.max(0,Math.min(level, max(rarity))-10));
-        document.getElementById("gpm").innerHTML = "GPM: " + base.toString() + " + " + (per * Math.min(level-1, 9)).toString() + " + " + (per / 2) * Math.max(0,Math.min(level, max(rarity))-10) + " = " + gpm;
+        perL = per * Math.min(level-1, 9);
+        perH = (per / 2) * Math.max(0,Math.min(level, max(rarity))-10);
+        gpm = Math.floor(base + perL + perH);
+        document.getElementById("gpm").innerHTML = "GPM: " + base.toString() + " + " + perL.toString() + " + " + perH.toString() + " &rArr; " + gpm;
     }
 }
 function max(i) {
