updated sidebar, added quadratic solver to projects section

--- a/projects/quadratic.html
+++ b/projects/quadratic.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Quadratic Formula
-section: Test
+title: Quadratic Formula Solver
+section: Projects
 last_modified_at: 2015-08-27
 ---
 
