Added set detection

--- a/utilities/Set/index.html
+++ b/utilities/Set/index.html
@@ -19,8 +19,11 @@
 
     </div>
 
-    <div id="div_board" class="fullView">
-        <canvas id="board">Please install a modern browser that supports Canvas elements!</canvas>
+    <div id="div_game" class="fullView">
+        <div id="div_board">
+            <canvas id="board">Please install a modern browser that supports Canvas elements!</canvas>
+        </div>
+        <div id="div_status"></div>
     </div>
 
     <div id="div_rules" class="fullView">
@@ -35,6 +38,7 @@
 
 
     <script type="text/javascript" src="script/jquery-3.1.1.js"></script>
+    <script type="text/javascript" src="script/combinations.js"></script>
     <script type="text/javascript" src="script/master.js"></script>
 </body>
 </html>
