Set: can now click on stuff

--- a/utilities/Set/index.html
+++ b/utilities/Set/index.html
@@ -20,10 +20,10 @@
     </div>
 
     <div id="div_game" class="fullView">
+        <div id="div_status"><p id="p_status"></p></div>
         <div id="div_board">
             <canvas id="board">Please install a modern browser that supports Canvas elements!</canvas>
         </div>
-        <div id="div_status"></div>
     </div>
 
     <div id="div_rules" class="fullView">
