--- a/utilities/Set/index.html
+++ b/utilities/Set/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style/master.css">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/style/sweetalert.css">
+    <link rel="stylesheet" type="text/css" href="/style/master.css">
+    <title>Set</title>
 </head>
 <body onresize="resizedWindow()">
     <div id="div_menu"><a onclick="javascript:showRules()">Rules</a><span id="status"></span></div>
@@ -37,8 +38,9 @@
 
 
 
-    <script type="text/javascript" src="script/jquery-3.1.1.js"></script>
-    <script type="text/javascript" src="script/combinations.js"></script>
-    <script type="text/javascript" src="script/master.js"></script>
+    <script type="text/javascript" src="/script/jquery-3.1.1.js"></script>
+    <script type="text/javascript" src="/script/combinations.js"></script>
+    <script type="text/javascript" src="/script/sweetalert.min.js"></script>
+    <script type="text/javascript" src="/script/master.js"></script>
 </body>
 </html>
