Set: can now progress through the deck as sets are found, added todo list.

--- a/utilities/Set/index.html
+++ b/utilities/Set/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/style/sweetalert.css">
-    <link rel="stylesheet" type="text/css" href="/style/master.css">
+    <link rel="stylesheet" type="text/css" href="style/sweetalert.css">
+    <link rel="stylesheet" type="text/css" href="style/master.css">
     <title>Set</title>
 </head>
 <body onresize="resizedWindow()">
@@ -38,9 +38,9 @@
 
 
 
-    <script type="text/javascript" src="/script/jquery-3.1.1.js"></script>
-    <script type="text/javascript" src="/script/combinations.js"></script>
-    <script type="text/javascript" src="/script/sweetalert.min.js"></script>
-    <script type="text/javascript" src="/script/master.js"></script>
+    <script type="text/javascript" src="script/jquery-3.1.1.js"></script>
+    <script type="text/javascript" src="script/combinations.js"></script>
+    <script type="text/javascript" src="script/sweetalert.min.js"></script>
+    <script type="text/javascript" src="script/master.js"></script>
 </body>
 </html>
