Set: fixed drawing cards so that they are taken first from extra before deck, fixed score (divided by 3), fixed swal when a set is found.  Swiched to jquery.min.

--- a/Games/Set/index.html
+++ b/Games/Set/index.html
@@ -45,7 +45,7 @@
 
 
 
-    <script type="text/javascript" src="script/jquery-3.1.1.js"></script>
+    <script type="text/javascript" src="script/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="script/combinations.js"></script>
     <script type="text/javascript" src="script/sweetalert.min.js"></script>
     <script type="text/javascript" src="script/master.js"></script>
