Set: added favicon

--- a/Games/Set/index.html
+++ b/Games/Set/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style/sweetalert.css">
     <link rel="stylesheet" type="text/css" href="style/master.css">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
     <title>Set</title>
 </head>
 <body onresize="resizedWindow()">
